# galvanic-test

./: .travis.yml  Cargo.toml  Readme.md
src/: lib.rs
tests/: fixture_with_members.rs  fixture_with_parameters.rs  fixture_without_parameters.rs  galvanic_mock_integration.rs  no_macro_use.rs  parameterised_fixture.rs  parameterised_test.rs  test_suite.rs  test_suite_no_mock.rs  test_with_parameters.rs
